# MeComPyAPI

./: AUTHORS  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  tec1090series.py  tec1091.py  tec1092.py
examples/: connect_ftdi.py  connect_serial_port.py  download_lookup_table.py  execute_lookup_table.py  get_object_temperature.py  monitor_data_logger.py  query_all_settings.py  set_auto_save_to_flash.py  set_integration_time.py  set_proportional_gain.py
mecom_core/: mecom_basic_cmd.py  mecom_frame.py  mecom_query_set.py  mecom_var_convert.py  statistics.py
mecom_tec/lookup_table/: LookupTable Sine ramp_0.1_degC_per_sec.csv  lut_cmd.py  lut_constants.py  lut_exception.py  lut_record.py  lut_status.py  lut_test.py
phy_wrapper/: int_mecom_phy.py  mecom_phy_serial_port.py
src/mecompyapi/: example.py  tec.py  tec1090series.py  tec1091.py  tec1092.py
src/mecompyapi/mecom_core/: com_command_exception.py  mecom_basic_cmd.py  mecom_frame.py  mecom_query_set.py  mecom_var_convert.py
src/mecompyapi/mecom_tec/lookup_table/: lut_cmd.py  lut_constants.py  lut_exception.py  lut_record.py  lut_status.py  lut_test.py
src/mecompyapi/mecom_tec/lookup_table/csv/: LookupTable Sine ramp_0.1_degC_per_sec.csv
src/mecompyapi/phy_wrapper/: int_mecom_phy.py  mecom_phy_ftdi.py  mecom_phy_serial_port.py
