[metadata]
name = mecompyapi
version = 0.0.1
author = John Houlihan
author_email = houlihaj@uci.edu
description = A Python API for the MeCom protocol by Meerstetter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/houlihaj/MeComPyAPI
project_urls = 
	Bug Tracker = https://github.com/houlihaj/MeComPyAPI/issues
classifiers =
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License
	Operating System :: Microsoft :: Windows
	
[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	pyserial>=3.5
	pythoncrc>=1.21
include_package_data=True

[options.packages.find]
where = src